--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container">
-    <h1>Регистрация</h1>
+    <h1>Register</h1>
     <form action="{{ url_for('register') }}" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
@@ -26,8 +26,9 @@
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
-        <p>{{ form.submit() }}</p>
+        <p>{{ form.submit(class_="styled-button") }}</p>
     </form>
-    <p>Уже зарегистрированы? <a href="{{ url_for('login') }}">Войдите</a></p>
+    <p>Already registered? <a href="{{ url_for('login') }}">Log in</a></p>
 </div>
+
 {% endblock %}
