Обновление логики приложения и тестов

--- a/app/templates/criterion.html
+++ b/app/templates/criterion.html
@@ -1,3 +1,4 @@
+<!--criterion.html-->
 {% extends "base.html" %}
 
 {% block content %}
@@ -11,7 +12,7 @@
             {% endfor %}
         </div>
         <div style="display: flex; font-size: 18px;">
-            Where: 1 = Who's there? and 10 = Cannot compromise on this!
+            Where: 1 = Not important and 10 = Cannot compromise on this!
         </div>
     </div>
 
