--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -1,3 +1,4 @@
+<!--results.html-->
 {% extends "base.html" %}
 
 {% block content %}
@@ -71,6 +72,9 @@
         </form>
         <form action="{{ url_for('alternative_evaluation') }}" method="post">
             <button type="submit">Back to analysis</button>
+        </form>
+        <form >
+            <button type="submit">Summary</button>
         </form>
     </div>
 </div>
